force-app/main/default/objects/CampaignMember/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>utm_campaign of the Campaign Member when they have responded to a Campaign.</description>
    <label>utm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>