force-app/main/default/objects/CampaignMember/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>utm_content of the Campaign Member when they have responded to a Campaign.</description>
    <label>utm_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>