force-app/main/default/objects/CampaignMember/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>utm_source of the Campaign Member when they have responded to a Campaign.</description>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>