force-app/main/default/objects/CampaignMember/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>utm_term of the Campaign Member when they have responded to a Campaign.</description>
    <label>utm_term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>